src/test/deca/syntax/valid/print_variants.deca

// Description :
// print / println / printx / printlnx / println / println / println / println
//
// Resultats :
// ok
//

{
    print (1);
    println (2);
    printx (3);
    printlnx (4);
    println("ok");
    println(true);
    println(false);
    println(2.5);

}