src/test/deca/syntax/invalid/provided/print_sans_accolade.deca
//lexical: bon
//syntaxe: manque le "}"

{print("game_of_thrones");